:sparkles: Add String lines method