@@ -21,11 +21,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.8.0</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
-                    <compilerArgument>--add-modules=jdk.incubator.httpclient</compilerArgument>
+                    <release>11</release>
                 </configuration>
             </plugin>
             <plugin>
